--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 flask==3.0.0
+flask-session==0.5.0
+flask-cors==4.0.0
 selenium==4.16.0
-undetected-chromedriver==3.5.4
-pyotp==2.9.0
+undetected-chromedriver==3.5.5
 python-dotenv==1.0.0
+pyotp==2.9.0
 beautifulsoup4==4.12.2
-webdriver_manager==4.0.1
+requests==2.31.0
+unidecode==1.3.7
+python-Levenshtein==0.23.0
+textdistance==4.6.1
+numpy==1.26.3
+sqlalchemy==2.0.25
+cx_oracle==8.3.0
+chromadb==0.4.22
